sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:10: error: reassignment to val
          i = i-1
            ^