sort.basic.gnome.AlgGnomeSort.scala.code
var finale = 0
var mem = 0
def gnomeSort()  {
  while (finale==0) {
    for (i<- 0 to getNombreValeurs()-2) {
      if (plusPetit(i,i-1)) {
        echange(i-1,i)
        if (i>0) {
        	i = i-1
        }
        mem = 1
      }
 		}
    if (mem==0) {
      finale=1
    }
    mem=0
  }
}